use DTO for create response data